SERVER-94974 Zone Sharding with Time Series Collections Doesn't Work Unless the Shard Key Includes the timeField (#34670)

GitOrigin-RevId: 162e22df28f87342dfbe8856471a01eab0ec9da9